manifest/app/monitor/ext-auth.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-auth
  namespace: lmonitor
spec:
  selector:
    matchLabels:
      app: anubis
  replicas: 3
  template:
    metadata:
      labels:
        app: anubis
    spec:
      containers:
      - name: anubis
        image: ghcr.io/techarohq/anubis:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 750m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: lmonitor
spec:
  selector:
    app: anubis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
