manifest/app/monitor/security.yaml
# SecurityPolicy for admin.lilamaris.kr
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-admin-route
  namespace: lmonitor
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: admin-route
  extAuth: 
    http:
      backendRefs:
        - name: ext-auth
          namespace: lmonitor
          port: 8080
    headersToExtAuth:
      - User-Agent
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - X-Real-Ip
      - X-Request-Id
      - Accept-Language
